--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="sass/fonts.css" type="text/css"/>
     <link rel="stylesheet" href="css/all.css?ver=1576950518871" type="text/css"/>
-    <title>TITLE</title>
+    <title>Photo time</title>
 </head>
 <body>
 <div id="wrapper">
