--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                 <img src="./images/camera.png" alt="camera">
             </a>
             <nav>
+                <span class="menu">
+                    Menu
+                </span>
                 <ul>
                     <li>
                         <a href="#">Home</a>
@@ -124,7 +127,7 @@
                 <h2>
                     subscribe to us community
                 </h2>
-                <form action="#" method="post" name="your-email-form">
+                <form action="#" method="post" name="your-email-form" novalidate>
                     <input type="email" name="your-email" aria-label="your email" placeholder="your email"/>
                     <button type="submit"><img src="./images/check.png" alt="check"></button>
                 </form>
